feat: add Perlin

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -62,6 +62,10 @@ target_include_directories(Client PRIVATE
 target_link_libraries(Client PRIVATE 
     Library
     glm::glm
+    glad::glad
+    nlohmann_json::nlohmann_json
+    imgui::imgui
+    glfw
 )
 
 # Disable debug symbols for RelWithDebInfo build
